BB-737 Rename SkuId to SkuCode
